add GetRecords
