# router/router.go
@@ -25,6 +25,7 @@ func NewRouter() *echo.Echo {
 	e.PATCH("/api/users/:user_id/spots/:spot_id", handler.UpdateSpot)
 	e.DELETE("/api/users/:user_id/spots/:spot_id", handler.DeleteSpot)
 
+	e.GET("/api/records", handler.GetRecords)
 	e.GET("/api/users/:user_id/records", handler.GetUserRecords)
 	e.GET("/api/spots/:spot_id/records", handler.GetSpotRecords)
 	e.GET("/api/records/:record_id", handler.GetRecord)
